fixed bugs with side header on mobile

--- a/src/assets/_alsdi-framework.scss
+++ b/src/assets/_alsdi-framework.scss
@@ -27,6 +27,9 @@
         box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.4);
 }
 
+.alsdi-overflow-hidden {
+    overflow: hidden !important
+}
 
 .alsdi-hoverable {
     cursor: pointer;
